# template-python

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  main.py  mypy.ini  pyproject.toml  ruff.toml  setup.cfg
.github/: copilot-instructions.md
.github/actions/ci/bandit/: action.yml
.github/actions/ci/mypy/: action.yml
.github/actions/ci/pip-audit/: action.yml
.github/actions/ci/pytest/: action.yml
.github/actions/ci/ruff/: action.yml
.github/actions/ci/validate-pyproject/: action.yml
.github/actions/ci/version-check/: action.yml
.github/actions/docs/build-docs/: action.yml
.github/actions/docs/publish-docs/: action.yml
.github/actions/install-python-core/: action.yml
.github/actions/install-python-dev/: action.yml
.github/actions/setup-python-core/: action.yml
.github/actions/setup-python-dev/: action.yml
.github/actions/setup-uv-python/: action.yml
.github/actions/setup/install-python-core/: action.yml
.github/actions/setup/install-python-dev/: action.yml
.github/actions/setup/install-python-docs/: action.yml
.github/actions/setup/set-package-name/: action.yml
.github/actions/setup/setup-uv-python/: action.yml
.github/workflows/: build.yml  ci.yml  codeql.yml  docs.yml
docs/: SMG.md  WORKFLOWS.md
docs/source/: api.rst  conf.py  index.rst  smg.md  smg.rst  workflows.md  workflows.rst
src/example/: main.py
template_python/: __init__.py  constants.py  logging_setup.py  main.py  models.py  workflows.py
tests/: test_logging_setup.py  test_main.py  test_models.py  test_script.py  test_workflows.py
tests/example/: test_main.py
